[package]
name = "gtk-test"
version = "0.1.0"
authors = ["RustedTerrier <RustedTerrier@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio= "*"
glib= "*"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]
